// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`options > getCodegenOptions snap 1`] = `
{
  "base": {
    "generateColors": [Function],
    "mediaDarkTheme": false,
    "themeSelectorTemplate": [Function],
    "themes": {
      "dark": {
        "extraColors": {
          "base-100": "#1d232a",
          "base-200": "#191e24",
          "base-300": "#15191e",
          "base-content": "#697280",
        },
        "extraVars": {
          "animation-btn": "0.25s",
          "animation-input": "0.2s",
          "border-btn": "1px",
          "rounded-badge": "1.9rem",
          "rounded-box": "1rem",
          "rounded-btn": "0.5rem",
          "skeleton-duration": "1.2s",
          "tab-border": "1px",
          "tab-radius": "0.5rem",
        },
        "selector": "[data-mode="dark"]",
        "types": {
          "error": {
            "error": "#d32029",
            "error-active": "#e84749",
            "error-content": "#ffffff",
            "error-hover": "#a61d24",
          },
          "neutral": {
            "neutral": "#5a5a5a",
            "neutral-active": "#6a6a6a",
            "neutral-content": "#ffffff",
            "neutral-hover": "#494949",
          },
          "primary": {
            "primary": "#1668dc",
            "primary-active": "#3c89e8",
            "primary-content": "#ffffff",
            "primary-hover": "#1554ad",
          },
          "success": {
            "success": "#49aa19",
            "success-active": "#6abe39",
            "success-content": "#ffffff",
            "success-hover": "#3c8618",
          },
          "warning": {
            "warning": "#d89614",
            "warning-active": "#e8b339",
            "warning-content": "#ffffff",
            "warning-hover": "#aa7714",
          },
        },
      },
      "light": {
        "extraColors": {
          "base-100": "#ffffff",
          "base-200": "#f2f2f2",
          "base-300": "#e5e6e6",
          "base-content": "#1f2937",
        },
        "extraVars": {
          "animation-btn": "0.25s",
          "animation-input": "0.2s",
          "border-btn": "1px",
          "rounded-badge": "1.9rem",
          "rounded-box": "1rem",
          "rounded-btn": "0.5rem",
          "skeleton-duration": "1.2s",
          "tab-border": "1px",
          "tab-radius": "0.5rem",
        },
        "selector": ":root",
        "types": {
          "error": {
            "error": "#f5222d",
            "error-active": "#cf1322",
            "error-content": "#ffffff",
            "error-hover": "#ff4d4f",
          },
          "neutral": {
            "neutral": "#666666",
            "neutral-active": "#404040",
            "neutral-content": "#ffffff",
            "neutral-hover": "#737373",
          },
          "primary": {
            "primary": "#1677ff",
            "primary-active": "#0958d9",
            "primary-content": "#ffffff",
            "primary-hover": "#4096ff",
          },
          "success": {
            "success": "#52c41a",
            "success-active": "#389e0d",
            "success-content": "#ffffff",
            "success-hover": "#73d13d",
          },
          "warning": {
            "warning": "#faad14",
            "warning-active": "#d48806",
            "warning-content": "#ffffff",
            "warning-hover": "#ffc53d",
          },
        },
      },
    },
  },
  "components": {
    "alert": {
      "schema": [Function],
      "selector": ".alert",
    },
    "avatar": {
      "schema": [Function],
      "selector": ".avatar",
    },
    "badge": {
      "schema": [Function],
      "selector": ".badge",
    },
    "bottom-navigation": {
      "schema": [Function],
      "selector": ".btm-nav",
    },
    "breadcrumbs": {
      "schema": [Function],
      "selector": ".breadcrumbs",
    },
    "button": {
      "schema": [Function],
      "selector": ".btn",
    },
    "card": {
      "schema": [Function],
      "selector": ".card",
    },
    "carousel": {
      "schema": [Function],
      "selector": ".carousel",
    },
    "chat": {
      "schema": [Function],
      "selector": ".chat",
    },
    "checkbox": {
      "schema": [Function],
      "selector": ".checkbox",
    },
    "collapse": {
      "schema": [Function],
      "selector": ".collapse",
    },
    "countdown": {
      "postcss": {
        "varPrefix": {
          "ignoreProp": [
            "--value",
          ],
          "ignoreValueCustomProperty": [
            "--value",
          ],
        },
      },
      "schema": [Function],
      "selector": ".countdown",
    },
    "diff": {
      "schema": [Function],
      "selector": ".diff",
    },
    "divider": {
      "schema": [Function],
      "selector": ".divider",
    },
    "drawer": {
      "schema": [Function],
      "selector": ".drawer",
    },
    "dropdown": {
      "schema": [Function],
      "selector": ".dropdown",
    },
    "file-input": {
      "schema": [Function],
      "selector": ".file-input",
    },
    "footer": {
      "schema": [Function],
      "selector": ".footer",
    },
    "form": {
      "schema": [Function],
    },
    "hero": {
      "schema": [Function],
      "selector": ".hero",
    },
    "indicator": {
      "schema": [Function],
      "selector": ".indicator",
    },
    "input": {
      "schema": [Function],
      "selector": ".input",
    },
    "join": {
      "schema": [Function],
      "selector": ".join",
    },
    "kbd": {
      "schema": [Function],
      "selector": ".kbd",
    },
    "link": {
      "schema": [Function],
      "selector": ".link",
    },
    "loading": {
      "schema": [Function],
      "selector": ".loading",
    },
    "mask": {
      "schema": [Function],
      "selector": ".mask",
    },
    "menu": {
      "schema": [Function],
      "selector": ".menu",
    },
    "navbar": {
      "schema": [Function],
      "selector": ".navbar",
    },
    "progress": {
      "schema": [Function],
      "selector": ".progress",
    },
    "radial-progress": {
      "postcss": {
        "varPrefix": {
          "ignoreProp": [
            "--size",
            "--thickness",
            "--value",
          ],
          "ignoreValueCustomProperty": [
            "--size",
            "--thickness",
            "--value",
          ],
        },
      },
      "schema": [Function],
      "selector": ".radial-progress",
    },
    "radio": {
      "schema": [Function],
      "selector": ".radio",
    },
    "range": {
      "schema": [Function],
      "selector": ".range",
    },
    "rating": {
      "schema": [Function],
      "selector": ".rating",
    },
    "select": {
      "schema": [Function],
      "selector": ".select",
    },
    "skeleton": {
      "schema": [Function],
      "selector": ".skeleton",
    },
    "stack": {
      "schema": [Function],
      "selector": ".stack",
    },
    "stat": {
      "schema": [Function],
      "selector": ".stat",
    },
    "steps": {
      "schema": [Function],
      "selector": ".step",
    },
    "swap": {
      "schema": [Function],
      "selector": ".swap",
    },
    "tab": {
      "schema": [Function],
      "selector": ".tab",
    },
    "table": {
      "schema": [Function],
      "selector": ".table",
    },
    "textarea": {
      "schema": [Function],
      "selector": ".textarea",
    },
    "timeline": {
      "schema": [Function],
      "selector": ".timeline",
    },
    "toast": {
      "schema": [Function],
      "selector": ".toast",
    },
    "toggle": {
      "schema": [Function],
      "selector": ".toggle",
    },
    "tooltip": {
      "postcss": {
        "varPrefix": {
          "ignoreProp": [
            "--tooltip-tail",
            "--tooltip-color",
            "--tooltip-text-color",
            "--tooltip-tail-offset",
          ],
          "ignoreValueCustomProperty": [
            "--tooltip-tail",
            "--tooltip-color",
            "--tooltip-text-color",
            "--tooltip-tail-offset",
          ],
        },
      },
      "schema": [Function],
      "selector": ".tooltip",
    },
  },
  "dryRun": false,
  "log": true,
  "mode": "preset",
  "pick": {
    "base": true,
    "styled": true,
    "utils": true,
  },
  "postcss": {
    "atMedia": {},
    "selector": {},
    "varPrefix": {
      "varPrefix": "--ice-",
    },
  },
}
`;

exports[`options > getCodegenOptions snap merge case 0 1`] = `
{
  "base": {
    "extraCss": {
      ".aaa": {
        "css": {
          "color": "blue",
        },
      },
      ":host": {
        "css": {
          "color": "red",
        },
      },
    },
    "generateColors": [Function],
    "mediaDarkTheme": false,
    "themeSelectorTemplate": [Function],
    "themes": {
      "dark": {
        "extraColors": {
          "base-100": "#1d232a",
          "base-200": "#191e24",
          "base-300": "#15191e",
          "base-content": "#697280",
        },
        "extraVars": {
          "animation-btn": "0.25s",
          "animation-input": "0.2s",
          "border-btn": "1px",
          "rounded-badge": "1.9rem",
          "rounded-box": "1rem",
          "rounded-btn": "0.5rem",
          "skeleton-duration": "1.2s",
          "tab-border": "1px",
          "tab-radius": "0.5rem",
        },
        "selector": "[data-mode="dark"]",
        "types": {
          "error": {
            "error": "#d32029",
            "error-active": "#e84749",
            "error-content": "#ffffff",
            "error-hover": "#a61d24",
          },
          "neutral": {
            "neutral": "#5a5a5a",
            "neutral-active": "#6a6a6a",
            "neutral-content": "#ffffff",
            "neutral-hover": "#494949",
          },
          "primary": {
            "primary": "#1668dc",
            "primary-active": "#3c89e8",
            "primary-content": "#ffffff",
            "primary-hover": "#1554ad",
          },
          "success": {
            "success": "#49aa19",
            "success-active": "#6abe39",
            "success-content": "#ffffff",
            "success-hover": "#3c8618",
          },
          "warning": {
            "warning": "#d89614",
            "warning-active": "#e8b339",
            "warning-content": "#ffffff",
            "warning-hover": "#aa7714",
          },
        },
      },
      "light": {
        "extraColors": {
          "base-100": "#ffffff",
          "base-200": "#f2f2f2",
          "base-300": "#e5e6e6",
          "base-content": "#1f2937",
        },
        "extraVars": {
          "animation-btn": "0.25s",
          "animation-input": "0.2s",
          "border-btn": "1px",
          "rounded-badge": "1.9rem",
          "rounded-box": "1rem",
          "rounded-btn": "0.5rem",
          "skeleton-duration": "1.2s",
          "tab-border": "1px",
          "tab-radius": "0.5rem",
        },
        "selector": ":root",
        "types": {
          "error": {
            "error": "#f5222d",
            "error-active": "#cf1322",
            "error-content": "#ffffff",
            "error-hover": "#ff4d4f",
          },
          "neutral": {
            "neutral": "#666666",
            "neutral-active": "#404040",
            "neutral-content": "#ffffff",
            "neutral-hover": "#737373",
          },
          "primary": {
            "primary": "#1677ff",
            "primary-active": "#0958d9",
            "primary-content": "#ffffff",
            "primary-hover": "#4096ff",
          },
          "success": {
            "success": "#52c41a",
            "success-active": "#389e0d",
            "success-content": "#ffffff",
            "success-hover": "#73d13d",
          },
          "warning": {
            "warning": "#faad14",
            "warning-active": "#d48806",
            "warning-content": "#ffffff",
            "warning-hover": "#ffc53d",
          },
        },
      },
    },
  },
  "components": {},
  "dryRun": true,
  "log": true,
  "mode": "none",
  "pick": {
    "base": true,
    "styled": true,
    "utils": true,
  },
  "postcss": {
    "atMedia": {},
    "selector": {},
    "varPrefix": {
      "varPrefix": "--ice-",
    },
  },
  "presets": [
    {
      "base": {
        "extraCss": [
          {
            ".aaa": {
              "css": {
                "color": "blue",
              },
            },
          },
        ],
      },
    },
  ],
}
`;

exports[`options > getCodegenOptions snap merge case 1 1`] = `
{
  "base": {
    "extraCss": {
      ":host": {
        "css": {
          "color": "red",
        },
      },
    },
    "generateColors": [Function],
    "mediaDarkTheme": false,
    "themeSelectorTemplate": [Function],
    "themes": {
      "dark": {
        "extraColors": {
          "base-100": "#1d232a",
          "base-200": "#191e24",
          "base-300": "#15191e",
          "base-content": "#697280",
        },
        "extraVars": {
          "animation-btn": "0.25s",
          "animation-input": "0.2s",
          "border-btn": "1px",
          "rounded-badge": "1.9rem",
          "rounded-box": "1rem",
          "rounded-btn": "0.5rem",
          "skeleton-duration": "1.2s",
          "tab-border": "1px",
          "tab-radius": "0.5rem",
        },
        "selector": "[data-mode="dark"]",
        "types": {
          "error": {
            "error": "#d32029",
            "error-active": "#e84749",
            "error-content": "#ffffff",
            "error-hover": "#a61d24",
          },
          "neutral": {
            "neutral": "#5a5a5a",
            "neutral-active": "#6a6a6a",
            "neutral-content": "#ffffff",
            "neutral-hover": "#494949",
          },
          "primary": {
            "primary": "#1668dc",
            "primary-active": "#3c89e8",
            "primary-content": "#ffffff",
            "primary-hover": "#1554ad",
          },
          "success": {
            "success": "#49aa19",
            "success-active": "#6abe39",
            "success-content": "#ffffff",
            "success-hover": "#3c8618",
          },
          "warning": {
            "warning": "#d89614",
            "warning-active": "#e8b339",
            "warning-content": "#ffffff",
            "warning-hover": "#aa7714",
          },
        },
      },
      "light": {
        "extraColors": {
          "base-100": "#ffffff",
          "base-200": "#f2f2f2",
          "base-300": "#e5e6e6",
          "base-content": "#1f2937",
        },
        "extraVars": {
          "animation-btn": "0.25s",
          "animation-input": "0.2s",
          "border-btn": "1px",
          "rounded-badge": "1.9rem",
          "rounded-box": "1rem",
          "rounded-btn": "0.5rem",
          "skeleton-duration": "1.2s",
          "tab-border": "1px",
          "tab-radius": "0.5rem",
        },
        "selector": ":root",
        "types": {
          "error": {
            "error": "#f5222d",
            "error-active": "#cf1322",
            "error-content": "#ffffff",
            "error-hover": "#ff4d4f",
          },
          "neutral": {
            "neutral": "#666666",
            "neutral-active": "#404040",
            "neutral-content": "#ffffff",
            "neutral-hover": "#737373",
          },
          "primary": {
            "primary": "#1677ff",
            "primary-active": "#0958d9",
            "primary-content": "#ffffff",
            "primary-hover": "#4096ff",
          },
          "success": {
            "success": "#52c41a",
            "success-active": "#389e0d",
            "success-content": "#ffffff",
            "success-hover": "#73d13d",
          },
          "warning": {
            "warning": "#faad14",
            "warning-active": "#d48806",
            "warning-content": "#ffffff",
            "warning-hover": "#ffc53d",
          },
        },
      },
    },
  },
  "components": {},
  "dryRun": true,
  "log": true,
  "mode": "none",
  "pick": {
    "base": true,
    "styled": true,
    "utils": true,
  },
  "postcss": {
    "atMedia": {},
    "selector": {},
    "varPrefix": {
      "varPrefix": "--ice-",
    },
  },
  "presets": [
    {
      "base": {
        "extraCss": [
          {
            ":host": {
              "css": {
                "color": "blue",
              },
            },
          },
        ],
      },
    },
  ],
}
`;

exports[`options > getCodegenOptions snap merge case 2 1`] = `
{
  ".d": {
    "css": {
      "color": "red",
    },
  },
  ":host": {
    "css": {
      "color": "red",
    },
  },
}
`;

exports[`options > getCodegenOptions snap merge case 3 1`] = `
{
  "dark": {
    "extraColors": {
      "base-100": "#1d232a",
      "base-200": "#191e24",
      "base-300": "#15191e",
      "base-content": "#697280",
    },
    "extraVars": {
      "animation-btn": "0.25s",
      "animation-input": "0.2s",
      "border-btn": "1px",
      "rounded-badge": "1.9rem",
      "rounded-box": "1rem",
      "rounded-btn": "0.5rem",
      "skeleton-duration": "1.2s",
      "tab-border": "1px",
      "tab-radius": "0.5rem",
    },
    "selector": "[data-mode="dark"]",
    "types": {
      "error": {
        "error": "#d32029",
        "error-active": "#e84749",
        "error-content": "#ffffff",
        "error-hover": "#a61d24",
      },
      "neutral": {
        "neutral": "#5a5a5a",
        "neutral-active": "#6a6a6a",
        "neutral-content": "#ffffff",
        "neutral-hover": "#494949",
      },
      "primary": {
        "primary": "#1668dc",
        "primary-active": "#3c89e8",
        "primary-content": "#ffffff",
        "primary-hover": "#1554ad",
      },
      "success": {
        "success": "#49aa19",
        "success-active": "#6abe39",
        "success-content": "#ffffff",
        "success-hover": "#3c8618",
      },
      "warning": {
        "warning": "#d89614",
        "warning-active": "#e8b339",
        "warning-content": "#ffffff",
        "warning-hover": "#aa7714",
      },
    },
  },
  "light": {
    "extraColors": {
      "base-100": "#ffffff",
      "base-200": "#f2f2f2",
      "base-300": "#e5e6e6",
      "base-content": "#1f2937",
    },
    "extraVars": {
      "animation-btn": "0.25s",
      "animation-input": "0.2s",
      "border-btn": "1px",
      "rounded-badge": "1.9rem",
      "rounded-box": "1rem",
      "rounded-btn": "0.5rem",
      "skeleton-duration": "1.2s",
      "tab-border": "1px",
      "tab-radius": "0.5rem",
    },
    "selector": ":root",
    "types": {
      "error": {
        "error": "#f5222d",
        "error-active": "#cf1322",
        "error-content": "#ffffff",
        "error-hover": "#ff4d4f",
      },
      "neutral": {
        "neutral": "#666666",
        "neutral-active": "#404040",
        "neutral-content": "#ffffff",
        "neutral-hover": "#737373",
      },
      "primary": {
        "primary": "#1677ff",
        "primary-active": "#0958d9",
        "primary-content": "#ffffff",
        "primary-hover": "#4096ff",
      },
      "success": {
        "success": "#52c41a",
        "success-active": "#389e0d",
        "success-content": "#ffffff",
        "success-hover": "#73d13d",
      },
      "warning": {
        "warning": "#faad14",
        "warning-active": "#d48806",
        "warning-content": "#ffffff",
        "warning-hover": "#ffc53d",
      },
    },
  },
  "xxx": {
    "extraCss": {
      ".a": {
        "css": {
          "color": "red",
        },
      },
      ".b": {
        "css": {
          "color": "blue",
        },
      },
    },
  },
}
`;
